# bubble_game_js

./: README.md  app.py  pyproject.toml
static/: game.js  styles.css
templates/: index.html
